UI bugfix
- Disable css visibility of modal when inactive (was covering new book button when window shrunk vertically)
- Minor UI fixes (modal transition fade, etc.)

--- a/style.css
+++ b/style.css
@@ -44,13 +44,15 @@ h1 {
 #newbook-btn-line p {
   font-family: "Parisienne";
   font-size: 26px;
-  margin: 16px 15px 0 7px;
+  margin: 16px;
 }
 
 #btn-newbook {
+  display: block;
   content: url(./img/plus.png);
   height: 70px;
   filter: invert(20%);
+  transform: translateY(2px) translateX(5px);
 }
 
 /* Modal input window */
@@ -67,13 +69,14 @@ h1 {
   box-shadow: 2px 3px 20px black, 0 0 50px #ffd1a6 inset;
   z-index: 7;
   opacity: 1;
-  transition: opacity 0.6s linear;
+  transition: all 0.6s ease-in-out;
 }
 
 .hidden {
   opacity: 0;
   z-index: 0;
-  transition: opacity 0.6s linear, z-index 1s linear;
+  transition: all 0.6s ease-in-out;
+  visibility: hidden;
 }
 
 #close-modal {
@@ -124,7 +127,7 @@ h1 {
   border-radius: 8px;
   font-size: 30px;
   width: 365px;
-  height: 36;
+  height: 36px;
 }
 
 #form-group-read {
@@ -174,6 +177,7 @@ input:checked:before {
 #grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  min-height: 75.8vh;
 }
 
 .book {
@@ -226,14 +230,12 @@ input[type="button"] {
 
 /* Footer */
 #footer-spacer {
-  min-height: 75.6vh;
+  /* min-height: 75.6vh; */
 }
 
 #footer-container {
-  /* position: absolute; */
   width: 100%;
   height: 40px;
-  /* bottom: 0; */
   background-color: #333;
 }
 
